<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:background="@color/teal_blue"
        android:text="@string/BMI"
        android:textColor="@color/grey"
        android:textSize="60sp"
        android:gravity="center"
        android:textStyle="bold"
        android:paddingTop="15dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/light_blue">

        <TextView
            android:id="@+id/height_main"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="150dp"
            android:layout_marginLeft="90dp"
            android:text="@string/height"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/head"/>
        <EditText
            android:id="@+id/height_value"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:ems="6"
            android:layout_marginLeft="20dp"
            android:hint="@string/height_cm"
            android:layout_marginTop="140dp"
            android:inputType="number"
            android:textColor="@color/head"
            android:layout_toRightOf="@+id/height_main"/>

        <TextView
            android:id="@+id/weight_main"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="225dp"
            android:layout_marginLeft="90dp"
            android:text="@string/weight"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/head"/>
        <EditText
            android:id="@+id/weight_value"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:ems="6"
            android:layout_marginLeft="20dp"
            android:hint="@string/weight_kg"
            android:layout_marginTop="215dp"
            android:inputType="number"
            android:textColor="@color/head"
            android:layout_toRightOf="@+id/weight_main"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/head"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="325dp"
            android:text="@string/calculate"
            android:textColor="@color/grey"
            android:textSize="20sp"/>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/grey"
        android:text="@string/actual_bmi"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/head"/>
</LinearLayout>