<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:orientation="vertical">
  <TextView
      android:layout_width="match_parent"
      android:layout_height="125dp"
      android:background="#223C02"
      android:text="@string/healthy"
      android:textColor="@color/grey"
      android:textSize="35sp"
      android:gravity="center"
      android:textStyle="bold"
      android:paddingTop="15dp"/>
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:background="#B2CF91">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:text="@string/congratulation"
        android:textColor="@color/head"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/result"
        android:textColor="@color/head"
        android:textSize="20sp" />
  </RelativeLayout>
  <TextView
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:background="@color/grey"
      android:text="@string/actual_bmi"
      android:textSize="20sp"
      android:gravity="center"
      android:textStyle="bold"
      android:textColor="@color/head"/>

  </LinearLayout>